// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helpers should apply a number display function: number display function result 1`] = `
t {
  "_value": 11,
}
`;

exports[`Helpers should expose a window object: limited window object 1`] = `
{
  "DEV_MODE": false,
  "PROD_MODE": false,
  "REVIEW_MODE": false,
  "TEST_MODE": true,
  "UI_DEPLOY_PATH_PREFIX": "",
  "UI_DISABLED": false,
  "UI_DISABLED_GRAPH": false,
  "UI_DISABLED_NOTIFICATIONS": false,
  "UI_DISABLED_TABLE": false,
  "UI_DISABLED_TABLE_HOSTS": false,
  "UI_DISABLED_TABLE_INSTANCES": false,
  "UI_DISABLED_TABLE_SUBSCRIPTIONS": false,
  "UI_DISABLED_TOOLBAR": false,
  "UI_DISPLAY_CONFIG_NAME": "Subscriptions",
  "UI_DISPLAY_NAME": "Subscriptions",
  "UI_DISPLAY_START_NAME": "Subscriptions",
  "UI_LINK_CONTACT_US": "https://access.redhat.com/account-team",
  "UI_LINK_LEARN_MORE": "https://access.redhat.com/documentation/en-us/subscription_central/2021/html/getting_started_with_the_subscriptions_service/con-how-does-subscriptionwatch-show-data_assembly-viewing-understanding-subscriptionwatch-data-ctxt/",
  "UI_LINK_REPORT_ACCURACY_RECOMMENDATIONS": "https://access.redhat.com/solutions/subscription-watch-mismatch",
  "UI_LOCALE_DEFAULT": "en-US",
  "UI_LOCALE_DEFAULT_DESC": "English",
  "UI_LOGGER_FILE": "curiosity_debug_log_{0}.json",
  "UI_LOGGER_ID": "curiosity",
  "UI_NAME": "subscriptions",
  "UI_PATH": "/apps/subscriptions/",
  "UI_VERSION": "0.0.0.0000000",
  "UI_WINDOW_ID": "curiosity",
  "aggregatedError": [Function],
  "browserExpose": [Function],
  "generateHash": [Function],
  "generateId": [Function],
  "isDate": [Function],
  "isPromise": [Function],
  "lorem": "ipsum",
  "noop": [Function],
  "noopPromise": Promise {},
  "noopTranslate": [Function],
  "numberDisplay": [Function],
}
`;

exports[`Helpers should expose a window object: window object 1`] = `
{
  "DEV_MODE": false,
  "PROD_MODE": false,
  "REVIEW_MODE": false,
  "TEST_MODE": true,
  "UI_DEPLOY_PATH_PREFIX": "",
  "UI_DISABLED": false,
  "UI_DISABLED_GRAPH": false,
  "UI_DISABLED_NOTIFICATIONS": false,
  "UI_DISABLED_TABLE": false,
  "UI_DISABLED_TABLE_HOSTS": false,
  "UI_DISABLED_TABLE_INSTANCES": false,
  "UI_DISABLED_TABLE_SUBSCRIPTIONS": false,
  "UI_DISABLED_TOOLBAR": false,
  "UI_DISPLAY_CONFIG_NAME": "Subscriptions",
  "UI_DISPLAY_NAME": "Subscriptions",
  "UI_DISPLAY_START_NAME": "Subscriptions",
  "UI_LINK_CONTACT_US": "https://access.redhat.com/account-team",
  "UI_LINK_LEARN_MORE": "https://access.redhat.com/documentation/en-us/subscription_central/2021/html/getting_started_with_the_subscriptions_service/con-how-does-subscriptionwatch-show-data_assembly-viewing-understanding-subscriptionwatch-data-ctxt/",
  "UI_LINK_REPORT_ACCURACY_RECOMMENDATIONS": "https://access.redhat.com/solutions/subscription-watch-mismatch",
  "UI_LOCALE_DEFAULT": "en-US",
  "UI_LOCALE_DEFAULT_DESC": "English",
  "UI_LOGGER_FILE": "curiosity_debug_log_{0}.json",
  "UI_LOGGER_ID": "curiosity",
  "UI_NAME": "subscriptions",
  "UI_PATH": "/apps/subscriptions/",
  "UI_VERSION": "0.0.0.0000000",
  "UI_WINDOW_ID": "curiosity",
  "aggregatedError": [Function],
  "browserExpose": [Function],
  "generateHash": [Function],
  "generateId": [Function],
  "isDate": [Function],
  "isPromise": [Function],
  "lorem": "ipsum",
  "noop": [Function],
  "noopPromise": Promise {},
  "noopTranslate": [Function],
  "numberDisplay": [Function],
}
`;

exports[`Helpers should handle use aggregate error, or fallback: emulated aggregate error 1`] = `
{
  "aggregated": [AggregateError: testing aggregated],
  "errors": [
    [Error: lorem ipsum],
    [Error: dolor sit],
  ],
  "isEmulated": true,
  "name": "AggregateError",
}
`;

exports[`Helpers should have specific functions: helpers 1`] = `
{
  "DEV_MODE": false,
  "PROD_MODE": false,
  "REVIEW_MODE": false,
  "TEST_MODE": true,
  "UI_DEPLOY_PATH_PREFIX": "",
  "UI_DISABLED": false,
  "UI_DISABLED_GRAPH": false,
  "UI_DISABLED_NOTIFICATIONS": false,
  "UI_DISABLED_TABLE": false,
  "UI_DISABLED_TABLE_HOSTS": false,
  "UI_DISABLED_TABLE_INSTANCES": false,
  "UI_DISABLED_TABLE_SUBSCRIPTIONS": false,
  "UI_DISABLED_TOOLBAR": false,
  "UI_DISPLAY_CONFIG_NAME": "Subscriptions",
  "UI_DISPLAY_NAME": "Subscriptions",
  "UI_DISPLAY_START_NAME": "Subscriptions",
  "UI_LINK_CONTACT_US": "https://access.redhat.com/account-team",
  "UI_LINK_LEARN_MORE": "https://access.redhat.com/documentation/en-us/subscription_central/2021/html/getting_started_with_the_subscriptions_service/con-how-does-subscriptionwatch-show-data_assembly-viewing-understanding-subscriptionwatch-data-ctxt/",
  "UI_LINK_REPORT_ACCURACY_RECOMMENDATIONS": "https://access.redhat.com/solutions/subscription-watch-mismatch",
  "UI_LOCALE_DEFAULT": "en-US",
  "UI_LOCALE_DEFAULT_DESC": "English",
  "UI_LOGGER_FILE": "curiosity_debug_log_{0}.json",
  "UI_LOGGER_ID": "curiosity",
  "UI_NAME": "subscriptions",
  "UI_PATH": "/apps/subscriptions/",
  "UI_VERSION": "0.0.0.0000000",
  "UI_WINDOW_ID": "curiosity",
  "aggregatedError": [Function],
  "browserExpose": [Function],
  "generateHash": [Function],
  "generateId": [Function],
  "isDate": [Function],
  "isPromise": [Function],
  "noop": [Function],
  "noopPromise": Promise {},
  "noopTranslate": [Function],
  "numberDisplay": [Function],
}
`;

exports[`Helpers should support generated consistent hashes from objects, primitive values: hash, object and primitive values 1`] = `
{
  "valueArray": "6abafa96eb7763c60585d01b00d26401af68852a",
  "valueArrayConfirmSort": true,
  "valueArraySort": "badcb2557a2648cf906797747ddab1c6c6c1fd4d",
  "valueBoolFalse": "c26064a8031add38b1fa508928893fadccf1de8b",
  "valueBoolTrue": "41a1d6ee98970161af1b75e2290afcd9f544d288",
  "valueFloat": "1e70d0255351d4e191b010df44e8ffd1d980aa53",
  "valueFunctionHelloWorld": "4c0c0018a209310592329c80554fe8f9cc38f309",
  "valueFunctionLoremIpsum": "0a1bf10c4148e2a399eeb9b157fe12f68911267d",
  "valueInt": "bbe5e4dce6f5f4b167e512d2f7aafbe4e1b23069",
  "valueNull": "81bfa081af1e51ef617a195a05eef28d20f4710f",
  "valueObject": "b5cd8abdd561b4ea4e71b8a8d0639e136f77a555",
  "valueSet": "19165127a3bb30872b0bf5335dbaabf8c1b6a7bd",
  "valueSetConfirmSort": true,
  "valueSetSort": "19165127a3bb30872b0bf5335dbaabf8c1b6a7bd",
  "valueSymbol": "6d3878e9be565e0df002d66e0f4350078289503e",
  "valueUndefined": "c61131bd38b00b2b7e3fdd98493d2a3ada08de55",
}
`;

exports[`Helpers should support generated consistent hashes from objects, primitive values: method md5 1`] = `"5ec8a033ea20082fe2b16b8a8c343492"`;
